# qce-qaoa-tutorial

./: .gitignore  Makefile  README.md  model.mod  pyproject.toml  requirements.txt  session_chair_assignment.lp  solution_pre.sol  test.py
scripts/: distance.ipynb  print.sh  sub.sh  test_notebooks.py  wstate.ipynb
solutions/: 01_QAOA.ipynb  02_PenaltyTerms.ipynb  03_XYMixers.ipynb  04_Aqarios_Luna.ipynb  05_Benchmarking.ipynb  06_ModelExtension.ipynb
src/model/: data.py  model.py  visualization.py
src/qce_qaoa_tutorial.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: __init__.py  algorithm.py  benchmark.py  optimize_and_plot.py  pretty_sol.py  qaoa.py  sampling.py  transformations.py
tutorials/: 01_QAOA.ipynb  02_PenaltyTerms.ipynb  03_XYMixers.ipynb  04_Aqarios_Luna.ipynb  05_Benchmarking.ipynb  06_ModelExtension.ipynb
