[project]
name = "qce-qaoa-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.7",
    "luna-quantum==1.0.4rc4",
    "matplotlib>=3.10.3",
    "names>=0.3.0",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.1",
    "pylatexenc>=2.10",
    "pyscipopt>=5.5.0",
    "qiskit>=2.0.2",
    "qiskit-aer>=0.17.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "ruff>=0.11.13",
]

[tool.uv.workspace]
members = ["qce-qaoa-tutorial-public"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/model"]

